<resources>
    <string name="app_name">Checkboxes and etc</string>
    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushes nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbles">Orio cookie crumbles</string>
    <string name="show_toast">Show Toast</string>
    <string name="toppings">Toppings: </string>
</resources>